--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       </li> -->
     </ul>
 
+    <p>This is the new content</p>
+
     <!-- Link JavaScript file -->
     <script src="./app.js"></script>
   </body>
