New words below

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </ul>
 
     <p>This is the new content</p>
+    <p>Another new content</p>
 
     <!-- Link JavaScript file -->
     <script src="./app.js"></script>
